Linked Into Style.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>CRINGEBots - the most cringiest bot in the discord!</title>
+<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body bgcolor="red">
 <center><h1>CRINGEBots</h1></center>
