--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body bgcolor="red">
 <center><h1>CRINGEBots</h1></center>
 <br /><br /><br />
-<center><img src="https://cdn.discordapp.com/app-icons/190165646045216768/0e56b1bd44ab8d131a75a1c45aedff1c.jpg" border-radius="5px" width="200" height="200" /></center>
+<center><img src="CharaRobotCringeTrans.png" border-radius="5px" width="200" height="200" /></center>
 <br /><br /><br />
 <center><h4>the most cringiest bot in the discord!</h4></center>
 <br /><br /><br /><br /><br /><br />
