Linked Into Bootstrap!

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <head>
 <title>CRINGEBots - the most cringiest bot in the discord!</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="bootstrap-theme.css" />
 </head>
 <body bgcolor="red">
+<script src="bootstrap.js"></script>
 <center><h1>CRINGEBots</h1></center>
 <br /><br /><br />
 <center><img src="CharaRobotCringeTrans.png" border-radius="5px" width="200" height="200" /></center>
