--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="bootstrap-theme.css" />
 </head>
-<body style="background: red">
+<body>
 <script src="bootstrap.js"></script>
 <center><h1>CRINGEBots</h1></center>
 <br /><br /><br />
