--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
 <link rel="stylesheet" type="text/css" href="bootstrap-theme.css" />
 </head>
 <body>
+<nav class="navbar navbar-default" background="red">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">CRINGEBot</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Cringe Request</a></li> 
+      <li><a href="#">Art</a></li> 
+    </ul>
+  </div>
+</nav>
+
 <script src="bootstrap.js"></script>
 <center><h1>CRINGEBots</h1></center>
 <br /><br /><br />
